force-app/main/default/objects/SLA__mdt/SLA__mdt.object-meta.xml
<CustomObject>
    <label>SLA specification</label>
    <pluralLabel>SLA specifications</pluralLabel>
</CustomObject>