force-app/main/default/objects/SLA__mdt/fields/Cross_sale__c.field-meta.xml
<CustomField>
    <fullName>Cross_sale__c</fullName>
    <label>Cross sale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>