force-app/main/default/objects/SLA__mdt/fields/New_business__c.field-meta.xml
<CustomField>
    <fullName>New_business__c</fullName>
    <label>New business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>