force-app/main/default/objects/SLA__mdt/fields/Renewal__c.field-meta.xml
<CustomField>
    <fullName>Renewal__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>