force-app/main/default/objects/SLA__mdt/fields/Upsale__c.field-meta.xml
<CustomField>
    <fullName>Upsale__c</fullName>
    <label>Upsale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>